Fixes a layout bug in Main component.

--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -47,11 +47,9 @@
 .navigationContainer {
     flex-grow: 1;
     flex-shrink: 0;
-    width: 61.8%;
 }
 
 .siteFooterContainer {
-    width: 61.8%;
 }
 
 // Content Containers
